--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build:css": "postcss src/index.css -o dist/output.css --watch"
+    "build:css": "postcss src/index.css -o dist/output.css --watch",
+    "server": "json-server -w src/data.json --port 3000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.2",
+    "json-server": "^1.0.0-beta.3",
     "primeicons": "^7.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
