--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "json-server": "^1.0.0-beta.3",
     "mongoose": "^8.12.1",
