connected to mongodb vue-traders/traders

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://makeup-app-user:lmsdLNEcGRGymWZa@elc-makeup-cluster.0pi4ejt.mongodb.net/Vue
+MONGODB_URI=mongodb+srv://makeup-app-user:lmsdLNEcGRGymWZa@elc-makeup-cluster.0pi4ejt.mongodb.net/vue-traders
